- Hide view changes in ranking images - Fix too big special day images on mobile - Improve links intro wording - Title attribute for no next/prev episode buttons - Allow cookies to be sent when embedded in other sites

--- a/websites/static/css/catalogue.css
+++ b/websites/static/css/catalogue.css
@@ -3281,6 +3281,11 @@ input:checked + .viewed-slider:before {
 		bottom: 2rem;
 	}
 
+	.recommendation .special-day-image {
+		width: 360px;
+		height: 150px;
+	}
+
 	.recommendation .genres {
 		max-width: 70vw;
 		max-height: 2.2rem;
